Fixed cutoff of tall characters in buttons

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,6 +21,7 @@
 .wrap-text {
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 2em;
 }
 
 .toast-success {
